fix overflow, lift map buttons, x-close modal,
added museo fonts back in, type kit not working well on dev server

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ a,a:visited,a:hover,a:focus{text-decoration:none}
   margin-right: 0;
 }
 .content-section {
-  padding: 0 10px 30px 18px;
+  padding: 0 0 30px 18px;
   font-family: "Minion-Pro", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
   font-size:1.06em;
   min-height:700px; 
@@ -163,10 +163,12 @@ a,a:visited,a:hover,a:focus{text-decoration:none}
 .panel-group{
   border:none;
   width:100%;
+  margin-top:-20px;
   /*margin:-10px -20px 0 -2px;*/
 }
 #accordion .panel h6{ 
 	font-size:1em; 
+	font-family: "Mueso Sans", sans-serif;
 	line-height:3.75em;
   border-top:1px solid #fff;
   border-bottom:1px solid #ccc;
@@ -575,7 +577,7 @@ a,a:visited,a:hover,a:focus{text-decoration:none}
   display: block;
   height: 21px;
   overflow: hidden;
-  width: 96%;
+  width:96%;
   background:transparent;
 }
 
@@ -588,9 +590,10 @@ a,a:visited,a:hover,a:focus{text-decoration:none}
 }
 
 .breadwrap ol {
-  margin: 1px 0 0;
+  margin: 0;
   padding: 0;
   white-space: nowrap;
+  width:100%;
   overflow: hidden;
   background: transparent;
   line-height:21px;
@@ -625,7 +628,7 @@ a,a:visited,a:hover,a:focus{text-decoration:none}
   display: inline-block;
   float: none;
   position: relative;
-  font-size; .88em;
+  font-size: .88em;
   height: 21px;
   line-height: 21px;
   overflow: hidden;
@@ -648,8 +651,8 @@ a,a:visited,a:hover,a:focus{text-decoration:none}
 	margin-right:2px;
 }
 
-.breadwrap ul li span,
-.breadwrap ol li span {
+.breadwrap ul li span.wholegrain,
+.breadwrap ol li span.wholegrain {
   display: block;
   overflow: hidden;
 }
@@ -694,8 +697,6 @@ a,a:visited,a:hover,a:focus{text-decoration:none}
 	font-weight:bold;
 }
 
-
-
 /*-------------------------------------*/
 /*----- END Header/Banner Section -----*/
 /*-------------------------------------*/
@@ -708,7 +709,6 @@ a,a:visited,a:hover,a:focus{text-decoration:none}
 /*----------------------------*/
 /*----- BEGIN NAVIGATION -----*/
 /*----------------------------*/
-
 
 /*--- BEGIN side col ---*/
 .content-resources {
@@ -1124,6 +1124,7 @@ ul.menu-main>li>a:first-child {
   padding-left: 15px;
   padding: 40px 0 20px 15px;
   background:#444;
+  display:table;
   /* position:relative; */
 } 
 
@@ -1197,7 +1198,7 @@ ul.menu-main>li>a:first-child {
     padding: 0;
     white-space: normal;
     height: auto;
-    *zoom: 1;
+    /* *zoom: 1; */
   }
 
   .breadwrap ul:before,
@@ -1295,7 +1296,7 @@ ul.menu-main>li>a:first-child {
 	.menu-toggle{ display:none;}
 	.titlearea{ min-height:55px;}
 	.titlearea .page-title { font-weight: normal; font-size:1.5em; line-height:1.5em; }
-  .breadwrap .breadCrumb li:first-child{ font-size:1em;}
+  .breadwrap .breadcrumb li:first-child{ font-size:1em;}
   	
 	.collections.container{ border:none; display:none; line-height:0 !important; height:0 !important;}
   
