--- a/css/places.css
+++ b/css/places.css
@@ -25,13 +25,13 @@
 .btn-group-gmaps{
 	display:inline-block;
 	position:relative;
-	top:-50px;
+	top:-70px;
 	left:80px;
 	-moz-box-shadow: 0px 0px 25px 0px rgba(50, 50, 50, 0.33);
 	box-shadow: 0px 0px 25px 0px rgba(50, 50, 50, 0.33);
 }
 
 
-.modal-header button.close{ color:#777; font-size:2.5em;}
+.modal-header button.close{ color:#777; font-size:5em;}
 
 
